[package]
name = "wledc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
reqwest = { version = "0.11.15", features = ["json", "blocking"]}
clap = { version = "4.1.13", features = ["derive"] }
serde = "1.0.158"
serde_json = "1.0.94"
